fix mail templates (missing spaces). add margin in causes cards in dashsboard. fix loader image, now it is dynamic

--- a/public/stylesheets/z_application.css
+++ b/public/stylesheets/z_application.css
@@ -500,3 +500,7 @@ li.plain_cell {
 #sidetree {
   display:none;
 }
+
+.boxHu {
+	margin: 0px 8px 8px 0px;
+}
